--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walled-mobile",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "expo": "~52.0.18",
+    "expo-checkbox": "~4.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "4.0.11",
     "expo-status-bar": "~2.0.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "zod": "^3.24.1",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
